force-app/main/default/objects/CE_Modules__c/fields/Course_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrollment__c</fullName>
    <label>Course Enrollment</label>
    <referenceTo>Course_Enrollment__c</referenceTo>
    <relationshipLabel>CE-Modules</relationshipLabel>
    <relationshipName>CE_Modules</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>