force-app/main/default/objects/CE_Modules__c/fields/Course_Master__c.field-meta.xml
<CustomField>
    <fullName>Course_Master__c</fullName>
    <label>Course Master</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipLabel>CE-Modules</relationshipLabel>
    <relationshipName>CE_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>