force-app/main/default/objects/CE_Modules__c/fields/Is_All_Sessions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Sessions_Completed__c</fullName>
    <formula>Total_Session__c  =  Total_Sessions_Completed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is All Sessions Completed</label>
    <type>Checkbox</type>
</CustomField>