force-app/main/default/objects/CE_Modules__c/fields/Module_Icon__c.field-meta.xml
<CustomField>
    <fullName>Module_Icon__c</fullName>
    <label>Module Icon</label>
    <type>Url</type>
</CustomField>