force-app/main/default/objects/CE_Modules__c/fields/Session_s_Point__c.field-meta.xml
<CustomField>
    <fullName>Session_s_Point__c</fullName>
    <formula>If( Course_Enrollment__r.Applied_by__c == &quot;Mentor&quot;,If(Total_Sessions_Completed__c &gt; 0,100 *  Total_Sessions_Completed__c,0) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session&apos;s Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>