force-app/main/default/objects/CE_Modules__c/fields/Total_Session__c.field-meta.xml
<CustomField>
    <fullName>Total_Session__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Session</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>