force-app/main/default/objects/CE_Modules__c/fields/Total_Sessions_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Sessions Completed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>