force-app/main/default/objects/CE_Modules__c/fields/Total_Sessions_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions_Duration__c</fullName>
    <label>Total Sessions Duration</label>
    <length>8</length>
    <type>Text</type>
</CustomField>