force-app/main/default/objects/CE_Modules__c/listViews/All_CE_Modules.listView-meta.xml
<ListView>
    <fullName>All_CE_Modules</fullName>
    <columns>NAME</columns>
    <columns>Course_Enrollment__c</columns>
    <columns>Course_Master__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Session__c</columns>
    <columns>Total_Sessions_Completed__c</columns>
    <columns>Total_Sessions_Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CE-Modules</label>
</ListView>